<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/all"
        app:tint="@color/orange_500" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@string/mainFont"
        android:text="@string/title_logo"
        android:textAlignment="center"
        android:textSize="60sp" />

    <Button
        android:id="@+id/all_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="allClick"
        android:text="@string/main_all_btn" />

    <Button
        android:id="@+id/fav_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="favClick"
        android:text="@string/main_fav_btn" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="createClick"
        android:text="@string/main_add_btn" />

</androidx.appcompat.widget.LinearLayoutCompat>