<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutDetails">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="189dp"
        android:layout_height="177dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/all"
        app:tint="@color/orange_500" />

    <TextView
        android:id="@+id/workoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/detailsNameHolder"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage" />

    <TextView
        android:id="@+id/workoutDurationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/detailsDuration"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutName" />

    <TextView
        android:id="@+id/workoutDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/detailsDurationHolder"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/workoutDurationTitle"
        app:layout_constraintTop_toBottomOf="@+id/workoutName" />

    <TextView
        android:id="@+id/workoutCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/detailsCategory"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutDurationTitle" />

    <TextView
        android:id="@+id/workoutCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/detailsCategoryHolder"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/workoutCategoryTitle"
        app:layout_constraintTop_toBottomOf="@+id/workoutDuration" />

    <TextView
        android:id="@+id/workoutDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/detailsDetails"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteCheckbox" />

    <TextView
        android:id="@+id/workoutDetails"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/detailsDetailsHolder"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutDetailsTitle"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/favoriteCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/detailsFavoriteCheckbox"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutCategoryTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>