<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TimerActivity">

    <ImageView
        android:id="@+id/timerImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/timer"
        app:tint="@color/orange_500" />

    <TextView
        android:id="@+id/titleLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@string/mainFont"
        android:text="@string/timerTitleLbl"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timerLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@string/mainFont"
        android:text="@string/timerValHolder"
        android:textSize="65sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStartPauseClick"
            android:text="@string/timerStartBtn"
            android:textSize="18sp" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:backgroundTint="@color/timerRed"
            android:onClick="onResetClick"
            android:text="@string/timerResetBtn"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>